--- a/f_0117/a_python01.ipynb
+++ b/f_0117/a_python01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5a502011",
+   "id": "dd67f689",
    "metadata": {},
    "source": [
     "# 엑셀 파일 업데이트\n",
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "38b60cfe",
+   "execution_count": 44,
+   "id": "f0e94e17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a242d3c",
+   "id": "081209ff",
    "metadata": {},
    "source": [
     "### 생성된 퇴사 날짜 열에 데이터(퇴사 날짜)를 추가하는 경우\n",
@@ -58,8 +58,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "c05fc7ec",
+   "execution_count": 46,
+   "id": "0f529574",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bb78283",
+   "id": "6ee40d48",
    "metadata": {},
    "source": [
     "# 엑셀 파일 접속\n",
@@ -106,16 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ce6838cf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "8f9efac8",
+   "execution_count": 53,
+   "id": "8980ea43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,12 +121,11 @@
     "sheet1_df = excel_data['Sheet1']\n",
     "\n",
     "# 'Sheet1'의 초기 행 수 저장 (추가된 데이터를 식별하기 위함)\n",
+    "# Sheet1의 원래 행의 개수를 저장 > 데이터 추가를 비교하기 위함\n",
     "initial_rows = sheet1_df.shape[0]\n",
     "\n",
-    "# 'Sheet1' 데이터 불러오기\n",
-    "sheet1_df = excel_data['Sheet1']\n",
-    "\n",
     "# 마지막 행의 'no' 컬럼 값을 가져옵니다.\n",
+    "# 새 데이터에 사용할 값: iloc: 인덱스 번호를 검색(-1은 제일 마지막 데이터를 찾아옴)\n",
     "last_no = sheet1_df['no'].iloc[-1]\n",
     "\n",
     "# 새 데이터에 사용할 'no' 값은 마지막 'no' 값에 1을 더한 값입니다.\n",
@@ -144,26 +135,33 @@
     "new_data = pd.DataFrame([{\n",
     "    \"no\": new_no, \"이름\": \"새 직원\", \"분야\": \"개발\", \"급수\": \"중급\",\n",
     "    \"부서\": \"개발부\", \"직위\": \"주임\", \"최초 입사일\": pd.to_datetime(\"2024-04-11\"),\n",
-    "    \"주소\": \"서울시 어딘가\", \"휴대폰 번호\": \"010-1234-5678\", \"소속\": \"B\",\n",
+    "    \"주소\": \"서울시 어딘가\", \"휴대폰 번호\": \"010-1234-5678\", \"소속\": \"A\",\n",
     "    \"퇴사 날짜\": pd.NaT\n",
     "}])\n",
     "\n",
     "# DataFrame을 합침\n",
+    "# concat(): 같은 데이터 타입의 값을 서로 더해주는 함수\n",
     "sheet1_df = pd.concat([sheet1_df, new_data], ignore_index=True)\n",
     "\n",
     "# 'Sheet1'에서 추가된 데이터 확인\n",
+    "# iloc[-1:]: 기존의 마지막 열부터 추가된 행까지를 읽어오는 기능\n",
     "added_data = sheet1_df.iloc[-1:]  # 마지막 행이 추가된 데이터\n",
     "\n",
     "# 각 소속의 '고용보험 가입자 현황' 시트 업데이트\n",
-    "for index, row in added_data.iterrows():\n",
-    "    affiliation = row['소속']\n",
-    "    joining_month = row['최초 입사일'].month\n",
-    "    month_column = f\"{joining_month}월\"\n",
+    "for index, row in added_data.iterrows(): # 추가된 데이터를 행별로 반복 처리\n",
+    "    affiliation = row['소속'] # 현재 행의 '소속' 컬럼의 값을 변수에 저장\n",
+    "    joining_month = row['최초 입사일'].month # '최초 입사일'에서 월 정보를 추출\n",
+    "    month_column = f\"{joining_month}월\" # 월 정보를 f'{}' 문자열로 변환하여 열 이름을 생성\n",
     "\n",
+    "    # 해당 소속의 '고용보험 가입자 현황' 시트 이름을 생성\n",
     "    employment_insurance_sheet = f\"{affiliation}_고용보험 가입자 현황\"\n",
+    "    # 해당 시트의 DataFrame을 가져옴\n",
     "    employment_insurance_df = excel_data[employment_insurance_sheet]\n",
     "\n",
-    "    # 입사인원 업데이트\n",
+    "    # 입사인원 업데이트'\n",
+    "    # 'Unnamed: 0' 열에서 '입사인원'행을 찾고\n",
+    "    # 해당 월의 열을 선택하여 입사인원 수를 1 증가\n",
+    "    # fillna(0)는 해당 월의 데이터가 비워져있으면 0으로 취급\n",
     "    employment_insurance_df.loc[employment_insurance_df['Unnamed: 0'] == '입사인원', month_column] = \\\n",
     "        employment_insurance_df.loc[employment_insurance_df['Unnamed: 0'] == '입사인원', month_column].fillna(0) + 1\n",
     "\n",
@@ -182,41 +180,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57e5dc04",
+   "id": "64e95d06",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "434c04b5",
+   "execution_count": 55,
+   "id": "7e7524ee",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "# 엑셀 파일 다시 읽기\n",
-    "file_path = \"employee.xlsx\"\n",
+    "file_path = \"employee.xlsx\" # 읽을 파일의 경로\n",
     "excel_data = pd.read_excel(file_path, sheet_name=None)\n",
     "\n",
-    "# 각 'A_고용보험 가입자 현황', 'B_고용보험 가입자 현황', 'C_고용보험 가입자 현황' 시트의 '총계' 계산 및 업데이트\n",
-    "for sheet_name, df in excel_data.items():\n",
-    "    if \"고용보험 가입자 현황\" in sheet_name:\n",
+    "# 각 'A_고용보험 가입자 현황', 'B_고용보험 가입자 현황', 'C_고용보험 가입자 현황' \n",
+    "# 시트의 '총계' 계산 및 업데이트\n",
+    "for sheet_name, df in excel_data.items(): # excel_data에 있는 모든 시트를 순회\n",
+    "    # 시트 이름에 '고용보험 가입자 현황'이 포함되어 있으면 if문 실행\n",
+    "    if \"고용보험 가입자 현황\" in sheet_name: \n",
     "        # 해당 소속의 고용보험 가입자 현황 시트\n",
+    "        # 현재 시트를 대상으로 작업\n",
     "        employment_insurance_df = df\n",
     "\n",
     "        # 각 월에 대한 재직인원, 입사인원, 퇴사인원 계산 및 총계 업데이트\n",
-    "        for month in range(1, 13):\n",
-    "            month_column = f\"{month}월\"\n",
+    "        for month in range(1, 13): # 1월부터 12월까지 반복\n",
+    "            month_column = f\"{month}월\" # 월을 나타내는 컬럼명을 작성\n",
     "            # 재직인원, 입사인원, 퇴사인원을 추출하고 NaN은 0으로 대체\n",
+    "            # : 데이터가 숫자가 아니라면(비워져있다면) 0으로 대체\n",
     "            in_service = employment_insurance_df.loc[employment_insurance_df['Unnamed: 0'] == '재직인원', month_column].fillna(0).values[0]\n",
     "            joined = employment_insurance_df.loc[employment_insurance_df['Unnamed: 0'] == '입사인원', month_column].fillna(0).values[0]\n",
     "            left = employment_insurance_df.loc[employment_insurance_df['Unnamed: 0'] == '퇴사인원', month_column].fillna(0).values[0]\n",
     "\n",
     "            # 총계 계산 및 업데이트\n",
-    "            total = in_service + joined - left\n",
+    "            total = in_service + joined - left # 총계 계산\n",
+    "            # 총계 업데이트 \n",
     "            employment_insurance_df.loc[employment_insurance_df['Unnamed: 0'] == '총계', month_column] = total\n",
     "\n",
-    "        # 업데이트된 고용보험 가입자 현황 저장\n",
+    "        # 업데이트된 고용보험 가입자 현황을 excel 전체 데이터에 저장\n",
     "        excel_data[sheet_name] = employment_insurance_df\n",
     "\n",
     "# 변경된 데이터를 파일로 다시 저장\n",
@@ -224,22 +229,6 @@
     "    for sheet_name, df in excel_data.items():\n",
     "        df.to_excel(writer, sheet_name=sheet_name, index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a8e1250",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d44f1440",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
